# docs-rag

./: .flake8  .gitignore  PROBLEM.md  README.md  docker-compose.hatchet.yml  docker-compose.yml  pyproject.toml
.github/: linters.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: inference.py
backend/app/core/: config.py  db.py  openai.py
workers/: .env.example  Dockerfile  main.py  pyproject.toml
