[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Akshat Sharma <akshatsharma2602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
black = "24.4.2"
flake8 = "7.0.0"
openai = "1.33.0"
tiktoken = "0.7.0"
langchain = "0.2.3"
langchain-chroma = "0.1.1"
pydantic-settings = "2.3.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.4"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
