[tool.poetry]
name = "workers"
version = "0.1.0"
description = ""
authors = ["Akshat Sharma <akshatsharma2602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hatchet-sdk = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
